# openclaw_todo_plugin

./: .gitignore  CHANGELOG.md  Makefile  README.md  STATUS.md  issues.md  openclaw_todo_plugin_prd.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  debugger.md  developer.md  devops.md  documenter.md  migrator.md  planner.md  qa-designer.md  refactorer.md  requirement-analyst.md  reviewer.md  ux-designer.md
.claude/run/: agent-state.json  events.jsonl
.claude/skills/debug/: SKILL.md
.github/workflows/: ci.yml
bridge/openclaw-todo/: index.ts  openclaw.plugin.json  package.json  tsconfig.json
docs/: README.md  architecture.md  requirements.md  review_notes.md  review_notes_pr43.md  review_notes_pr45.md  review_notes_pr46.md  review_notes_pr47.md  review_notes_pr49.md  review_notes_pr51.md  review_notes_pr53.md  review_notes_pr55.md  review_notes_pr57.md  review_notes_pr59.md  review_notes_pr61.md  review_notes_pr63.md  review_notes_pr65.md  review_notes_pr67.md  review_notes_pr86.md  test_plan.md  ux_spec.md
src/openclaw_todo/: __init__.py  __main__.py  cmd_add.py  cmd_board.py  cmd_done_drop.py  cmd_edit.py  cmd_list.py  cmd_move.py  cmd_project_create.py  cmd_project_delete.py  cmd_project_list.py  cmd_project_rename.py  cmd_project_set_private.py  cmd_project_set_shared.py  db.py  dispatcher.py  event_logger.py  migrations.py  parser.py  permissions.py  plugin.py  project_resolver.py  schema_v1.py  scope_builder.py  server.py
tests/: conftest.py  test_cmd_add.py  test_cmd_board.py  test_cmd_done_drop.py  test_cmd_edit.py  test_cmd_list.py  test_cmd_move.py  test_cmd_project.py  test_cmd_project_create.py  test_cmd_project_delete.py  test_cmd_project_rename.py  test_cmd_project_set_private.py  test_cmd_project_set_shared.py  test_db.py  test_dispatcher.py  test_e2e.py  test_manifest.py  test_migrations.py  test_parser.py  test_permissions.py  test_plugin.py  test_plugin_install_e2e.py  test_project_resolver.py  test_schema_v1.py  test_server.py
(+8 files in other folders)
