[project]
name = "openclaw-todo-plugin"
version = "0.1.0"
description = "OpenClaw TODO plugin for Slack — team/personal task management via DM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "pillip" },
]
keywords = ["openclaw", "todo", "slack", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
openclaw-todo-server = "openclaw_todo.server:run"

[project.entry-points."openclaw.plugins"]
todo = "openclaw_todo.plugin:handle_message"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "install: plugin install e2e tests (entry-point discovery)",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".claude-kit", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
target-version = ["py310"]
line-length = 120
extend-exclude = '''
/(
    \.claude-kit
  | \.claude
)/
'''

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_todo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
